Fixed out of align texts

--- a/index.css
+++ b/index.css
@@ -107,9 +107,14 @@ a:hover {
 }
 
 #aboutme {
-	text-align: center;
+	text-align: center;block;
 	letter-spacing: 3px;
 	font-weight: bold;
+}
+
+#aboutme2 {
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 #mcs {
@@ -119,6 +124,9 @@ a:hover {
 .htmlcssjs {
 	height:150px;
 	width: 375px;
+	margin-left: auto;
+  margin-right: auto;
+	display: block;
 }
 
 /*Portfolio SECTION STYLES*/
@@ -258,6 +266,7 @@ opacity: 1;
 
 .workdates,.worktasks {
 	font-size: 13px;
+	margin-top: 10px;
 }
 .content {
 padding-top: 20px;
@@ -287,7 +296,8 @@ padding-left:40px;
 
 .EmailMe {
 	background-color: black;
-	border-color: black;
+	border-color: white;
+	border-width: 5px;
 	cursor: pointer;
 }
 .EmailMe a {
